[Refactor] ClubEntity.thumbnailUrl -> thumbnailFileKey로 변경완료
- ClubResponseDto
- GuestClubService
- OwnerCLubService
- Club
- InitDb
해당 java 파일에서 변경이 이루어짐.